--- a/src/main/resources/templates/views/index.html
+++ b/src/main/resources/templates/views/index.html
@@ -13,10 +13,10 @@
 				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
 					<span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" href="#">User Name</a>
+				<a class="navbar-brand" th:href="@{/}" th:text="#{todoapp.appName}"></a>
 			</div>
 			<div class="collapse navbar-collapse" id="myNavbar" style="text-align: center; line-height: 50px;">
-				<a th:href="@{/}" style="text-decoration: none; font-size: 20px; color: #fff;">ToDo App</a>
+				<a href="#" style="text-decoration: none; font-size: 20px; color: #fff;"><i class="fa fa-user"></i> User Name</a>
 				<ul class="nav navbar-nav navbar-right">
 					<li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
 					<li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
@@ -30,7 +30,7 @@
 			<div class="col-md-4">
 				<div class="panel panel-primary panel-box">
 					<div class="panel-heading">
-						<h5 style="text-align: center;">To Do</h5>
+						<h4 style="text-align: center;" th:text="#{todoapp.todoBox}">To Do</h4>
 					</div>
 					<div class="panel-body" style="background: #e2e4e6">
 						<!-- add item button -->
@@ -58,7 +58,8 @@
 								<!-- if it is not for update -->
 								<span th:if="${update != 'true'}">
 									<div class="col-md-12 item-box" style="background: #fff; padding: 10px; border-radius: 5px;">
-										<a id="editLinkButton" th:href="@{/updateTodoItem/} + ${item.id}" class="pull-right" style="margin-left: 10px;"><i class="fa fa-edit"></i></a>
+										<a title="Move to In Progress" id="editLinkButton" th:href="@{/moveToInProgress/} + ${item.id}" class="pull-right" style="margin-left: 10px;"><i class="fa fa-arrow-right"></i></a>
+										<a title="Update" id="editLinkButton" th:href="@{/updateTodoItem/} + ${item.id}" class="pull-right" style="margin-left: 10px;"><i class="fa fa-edit"></i></a>
 										<p style="margin: 0;" th:text="${{item.des}}"></p>
 									</div>
 								</span> 
@@ -69,15 +70,18 @@
 										<form th:action="@{/updateItem}" method="post" th:object="${todoItemById}">
 											<div class="col-md-12" style="background: #fff; padding: 10px; border-radius: 5px;">
 												<input type="hidden" th:field="*{id}"/>
+												<span style="padding-bottom: 5px;" th:if="${#fields.hasErrors('des')}" th:errors="*{des}" class="text-danger">adfasd</span>
 												<textarea rows="5" class="form-control" th:field="*{des}"></textarea>
 												<button type="submit" class="btn btn-warning btn-sm" style="margin-top: 10px;"><i class="fa fa-pencil-square-o"></i> Update</button>
+												<a th:href="@{/}" class="btn btn-danger btn-sm" style="margin-top: 10px;"><i class="fa fa-times"></i></a>
 											</div>
 										</form>
 									</span> 
 									<!-- non updatable item -->
 									<span th:if="${todoItemById.id != item.id}">
 										<div class="col-md-12 item-box" style="background: #fff; padding: 10px; border-radius: 5px;">
-											<a id="editLinkButton" th:href="@{/updateTodoItem/} + ${item.id}" class="pull-right" style="margin-left: 10px;"><i class="fa fa-edit"></i></a>
+											<a title="Move to In Progress" id="editLinkButton" th:href="@{/moveToInProgress/} + ${item.id}" class="pull-right" style="margin-left: 10px;"><i class="fa fa-arrow-right"></i></a>
+											<a title="Update" id="editLinkButton" th:href="@{/updateTodoItem/} + ${item.id}" class="pull-right" style="margin-left: 10px;"><i class="fa fa-edit"></i></a>
 											<p style="margin: 0;" th:text="${{item.des}}"></p>
 										</div>
 									</span>
@@ -91,22 +95,16 @@
 			<div class="col-md-4">
 				<div class="panel panel-success panel-box">
 					<div class="panel-heading">
-						<h5 style="text-align: center;">In Progress</h5>
+						<h4 style="text-align: center;" th:text="#{todoapp.inProgressBox}">In Progress</h4>
 					</div>
 					<div class="panel-body" style="background: #e2e4e6">
-						<div class="col-md-12" style="margin-bottom: 10px;">
+						<!-- loop -->
+						<div id="itemMainBox" th:each="item,num : ${inProgressItems}" class="col-md-12" style="margin-bottom: 10px;">
 							<div class="row">
-								<div class="col-md-11 item-box" style="background: #fff; padding: 10px; border-radius: 5px;">to do app sfsdfs asdf asdf adsf adsf asf sdf sadfasdf asf sdafsdf ad</div>
-								<div class="col-md-1">
-									<a href=""><i class="fa fa-arrow-left"></i></a> <a href=""><i class="fa fa-arrow-right"></i></a>
-								</div>
-							</div>
-						</div>
-						<div class="col-md-12" style="margin-bottom: 10px;">
-							<div class="row">
-								<div class="col-md-11 item-box" style="background: #fff; padding: 10px; border-radius: 5px;">to do app sfsdfs asdf asdf adsf adsf asf sdf sadfasdf asf sdafsdf ad</div>
-								<div class="col-md-1">
-									<a href=""><i class="fa fa-arrow-left"></i></a> <a href=""><i class="fa fa-arrow-right"></i></a>
+								<div class="col-md-12 item-box" style="background: #fff; padding: 10px; border-radius: 5px;">
+									<a title="Move to Done" id="editLinkButton" th:href="@{/moveToDone/} + ${item.id}" class="pull-right" style="margin-left: 10px;"><i class="fa fa-arrow-right"></i></a>
+									<a title="Move to ToDo" id="editLinkButton" th:href="@{/moveToTodo/} + ${item.id}" class="pull-right" style="margin-left: 10px;"><i class="fa fa-arrow-left"></i></a>
+									<p style="margin: 0;" th:text="${{item.des}}"></p>
 								</div>
 							</div>
 						</div>
@@ -117,22 +115,16 @@
 			<div class="col-md-4">
 				<div class="panel panel-warning panel-box">
 					<div class="panel-heading">
-						<h5 style="text-align: center;">Done</h5>
+						<h4 style="text-align: center;" th:text="#{todoapp.doneBox}">Done</h4>
 					</div>
 					<div class="panel-body" style="background: #e2e4e6">
-						<div class="col-md-12" style="margin-bottom: 10px;">
+						<!-- loop -->
+						<div id="itemMainBox" th:each="item,num : ${doneItems}" class="col-md-12" style="margin-bottom: 10px;">
 							<div class="row">
-								<div class="col-md-11 item-box" style="background: #fff; padding: 10px; border-radius: 5px;">to do app sfsdfs asdf asdf adsf adsf asf sdf sadfasdf asf sdafsdf ad</div>
-								<div class="col-md-1">
-									<a href=""><i class="fa fa-trash"></i></a> <a href=""><i class="fa fa-arrow-left"></i></a>
-								</div>
-							</div>
-						</div>
-						<div class="col-md-12" style="margin-bottom: 10px;">
-							<div class="row">
-								<div class="col-md-11 item-box" style="background: #fff; padding: 10px; border-radius: 5px;">to do app sfsdfs asdf asdf adsf adsf asf sdf sadfasdf asf sdafsdf ad</div>
-								<div class="col-md-1">
-									<a href=""><i class="fa fa-trash"></i></a> <a href=""><i class="fa fa-arrow-left"></i></a>
+								<div class="col-md-12 item-box" style="background: #fff; padding: 10px; border-radius: 5px;">
+									<a onClick="return confirm('Are you want to delete this item?')" title="Delete" id="editLinkButton" th:href="@{/deleteItem/} + ${item.id}" class="pull-right" style="margin-left: 10px;"><i class="fa fa-trash"></i></a>
+									<a title="Move to In Progress" id="editLinkButton" th:href="@{/moveToInProgressFromDone/} + ${item.id}" class="pull-right" style="margin-left: 10px;"><i class="fa fa-arrow-left"></i></a>
+									<p style="margin: 0;" th:text="${{item.des}}"></p>
 								</div>
 							</div>
 						</div>
